--- a/CSS/stilo.css
+++ b/CSS/stilo.css
@@ -1,6 +1,8 @@
 body{
 	font-family: 'Roboto', sans-serif;
 	color: #333;
+	margin: 0;
+	padding: 0;
 }
 a:link, a:active, a:visited{
 	color: #315e8a;
@@ -157,4 +159,53 @@ h2.cad, h2.log, h1.open{
 }
 .info ul li a{
 	font-size: 160%;
+}
+/*Caixa de pesquisa*/
+.search-box{
+	position: absolute; 
+	top: 50%; 
+	left: 50%; 
+	transform: translate(-50%, -50%); 
+	background: #315e8a; 
+	height: 40px; 
+	border-radius: 40px; 
+	padding: 10px; 
+}
+.search-box:hover > .search-txt{
+	width: 240px;
+	padding: 0 6px;
+}
+.search-box:hover > .search-btn{
+	background: white;
+	color: black;	
+}
+.search-btn{
+	color: #e84118; 
+ 	float: right; 
+ 	width: 40px; 
+ 	height: 40px; 
+ 	border-radius: 50%; 
+ 	background: #315e8a; 
+ 	display: flex; 
+ 	justify-content: center; 
+ 	align-items: center; 
+ 	transition: 0.4s; 
+ 	color: white; 
+ 	cursor: pointer;
+}
+.search-btn > i{
+	font-size: 30px;
+}
+.search-txt{
+	border: none; 
+ 	background: none; 
+ 	outline: none; 
+ 	float: left; 
+ 	padding: 0; 
+ 	color: white; 
+ 	font-size: 16px; 
+ 	transition: 0.4s; 
+ 	line-height: 40px; 
+ 	width: 0px; 
+ 	font-weight: bold; 
 }
