--- a/CSS/stilo.css
+++ b/CSS/stilo.css
@@ -217,3 +217,21 @@ h2.cad, h2.log, h1.open{
 	padding-left: 1em;
 	font-style: italic;
 }
+p.video{
+	color: #315e8a;
+	font-style: italic;
+	font-size: 20px;
+	font-weight: 350;
+}
+.videoesquerda{
+	float: left;
+	margin-top:10px;
+	margin-bottom:10px;
+	margin-left:150px;
+}
+.videodireita{
+	float: right;
+	margin-top:10px;
+	margin-bottom:10px;
+	margin-right:150px;
+}
